--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     padding: 15px;
   }
   
-  figure{
+  #img-div{
     margin: 0 auto;
     padding: 10px;
     width: 11em;
@@ -31,7 +31,7 @@
     max-width: 550px;
     display: inline-block;
   }
-  #time-line :not(h3) {
+  #tribute-info :not(h3) {
     text-align: left;
     list-style: none;
   }
