--- a/style.css
+++ b/style.css
@@ -1,53 +1,56 @@
-  html {
-    background-color: white;
-  }
-  body {
-    margin-top: 60px;
-    text-align: center;
-    line-height: 1.5;
-    font-family: system-ui;
-    background-color: rgba(0, 0, 0, 0.15);
-  }
-  main {
-    margin: 30px 8px;
-    padding: 15px;
-  }
-  
-  #img-div{
-    margin: 0 auto;
-    padding: 10px;
-    width: 11em;
-    border-radius: 5px;
-    background-color: white;
-  }
-  img {
-    width: 10em;
-  }
-  figcaption {
-    margin: 15px 0 5px 0;
-  }
-  ul, ol {
-    margin: 0 auto 30px auto;
-    max-width: 550px;
-    display: inline-block;
-  }
-  #tribute-info :not(h3) {
-    text-align: left;
-    list-style: none;
-  }
+html {
+  background-color: white;
+}
+body {
+  margin-top: 60px;
+  text-align: center;
+  line-height: 1.5;
+  font-family: system-ui;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+main {
+  margin: 30px 8px;
+  padding: 15px;
+}
 
-  a {
-    color: #477ca7;
-  }
-  a:visited{
-    color: #74638f
-  }
-  blockquote {
-    margin: 0 auto 40px auto;
-    font-style: italic;
-    text-align: left;
-    max-width: 550px;
-  }
-  footer {
-    height: 80px;
-  }
+#img-div{
+  margin: 0 auto;
+  padding: 10px;
+  width: 11em;
+  border-radius: 5px;
+  background-color: white;
+}
+img {
+  display: block;
+  margin: 0 auto;
+  width: 10em;
+  max-width: 100vh;
+}
+figcaption {
+  margin: 15px 0 5px 0;
+}
+ul, ol {
+  margin: 0 auto 30px auto;
+  max-width: 550px;
+  display: inline-block;
+}
+#tribute-info :not(h3) {
+  text-align: left;
+  list-style: none;
+}
+
+a {
+  color: #477ca7;
+}
+a:visited{
+  color: #74638f
+}
+blockquote {
+  margin: 0 auto 40px auto;
+  font-style: italic;
+  text-align: left;
+  max-width: 550px;
+}
+footer {
+  height: 80px;
+}
